--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "expo": "^34.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -17,7 +18,8 @@
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "react-navigation-header-buttons": "^3.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
