--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-paper": "^3.4.0",
     "react-native-reanimated": "~1.1.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
-    "react-navigation-header-buttons": "^3.0.4"
+    "react-navigation-header-buttons": "^3.0.4",
+    "react-navigation-material-bottom-tabs": "^2.1.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
