--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
     "react-navigation-header-buttons": "^3.0.4",
-    "react-navigation-material-bottom-tabs": "^2.1.5"
+    "react-navigation-material-bottom-tabs": "^2.1.5",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
